# MCP-LLamaIndex-CRUD-Agent

./: .env  .env.docker  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
config/: __init__.py  prompts.py  settings.py
mcp/: mcp_server.py
mlartifacts/0/traces/0e5723a5ea9a4211a58614b608dad243/artifacts/: traces.json
mlartifacts/0/traces/6eebff57412c4286bee9120e3202ec2d/artifacts/: traces.json
mlartifacts/0/traces/dab39a2791fc4c2ba636ab810ae820a3/artifacts/: traces.json
mlartifacts/0/traces/f3a0f0d879be4938bfafef161239169f/artifacts/: traces.json
mlruns/0/: meta.yaml
mlruns/0/traces/0e5723a5ea9a4211a58614b608dad243/: trace_info.yaml
mlruns/0/traces/0e5723a5ea9a4211a58614b608dad243/request_metadata/: mlflow.source.git.repoURL
mlruns/0/traces/0e5723a5ea9a4211a58614b608dad243/tags/: mlflow.artifactLocation
mlruns/0/traces/6eebff57412c4286bee9120e3202ec2d/: trace_info.yaml
mlruns/0/traces/6eebff57412c4286bee9120e3202ec2d/request_metadata/: mlflow.source.git.commit  mlflow.traceInputs
mlruns/0/traces/6eebff57412c4286bee9120e3202ec2d/tags/: mlflow.artifactLocation  mlflow.traceName
mlruns/0/traces/dab39a2791fc4c2ba636ab810ae820a3/: trace_info.yaml
mlruns/0/traces/dab39a2791fc4c2ba636ab810ae820a3/request_metadata/: mlflow.traceInputs  mlflow.traceOutputs
mlruns/0/traces/dab39a2791fc4c2ba636ab810ae820a3/tags/: mlflow.artifactLocation
mlruns/0/traces/f3a0f0d879be4938bfafef161239169f/: trace_info.yaml
scripts/: agent.py  events.py  simple_agent.py  workflow.py
(+3 files in other folders)
